[package]
name = "meliplug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
askama = "0.12.1"
axum = "0.8.1"
chrono = "0.4.40"
chrono-tz = "0.10.1"
hotwatch = "0.5.0"
katex = "0.4.6"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
syntect = "5.2.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
yaml-rust2 = "0.10.0"
