[package]
name = "meliplug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
askama = "0.12.1"
axum = "0.8.1"
chrono = "0.4.40"
chrono-tz = "0.10.1"
hotwatch = "0.5.0"
katex = { version = "0.4.6", features = ["wasm-js"] }
pulldown-cmark = "0.13.0"
regex = "1.11.1"
rmp = "0.8.14"
serde = "1.0.218"
serde_json = "1.0.140"
socketioxide = "0.16.1"
syntect = "5.2.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["fs"] }
walkdir = "2.5.0"
yaml-rust2 = "0.10.0"
